[Web] 코딩야학 5기 10~14강 실습 코드

--- a/web/0.html
+++ b/web/0.html
@@ -1,5 +1,27 @@
-<h1>코딩야학 5기 실습 내용</h1>
+<!doctype html>
+<html>
+    <head>
+        <title>코딩야학 5기 실습 내용</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <h1>코딩야학 5기 실습 내용</h1>
+        <p>코딩야학 5기에 참가하여 실습한 코드와 알게된 내용을 기록하려 합니다.</p>
 
-<p>코딩야학 5기에 참가하여 실습한 코드와 알게된 내용을 기록하려 합니다.</p>
-<p>참고하면 좋은 사이트 : https://www.advancedwebranking.com/</p>
-<p>현재 진도 : 9.줄바꿈 완료</p>
+        <h3>참고하면 좋은 사이트</h3>
+        <ul>
+            <li>많이 사용되는 tag 랭킹 사이트 : <a href="https://www.advancedwebranking.com/" target="_blank">https://www.advancedwebranking.com/</a></li>
+            <li>저작권 없는 이미지 사이트 : <a href="https://unsplash.com/" target="_blank">https://unsplash.com/</a></li>
+        </ul>
+
+        <h3>현재 진도</h3>
+        <p>14.html 태그의 제왕</p>
+
+        <h3>html의 유용함</h3>
+        <p>
+            검색 엔진은 수많은 웹페이지를 다운받아 html 코드를 분석한다. 그러므로 heading tag를 사용한 글과 그냥 시각적으로 bold와 font-size로만 조절한 글이 검색 사이트에서 우선 순위에 차이가 있을 것이다.<br>
+            웹은 모든 OS에서 동작하고, 소스코드를 누구나 볼 수 있으며 저작권이 없는 순수 공동체이다.
+        </p>
+    </body>
+</html>
+
