--- a/web/0.html
+++ b/web/0.html
@@ -15,12 +15,17 @@
         </ul>
 
         <h3>현재 진도</h3>
-        <p>14.html 태그의 제왕</p>
+        <p>15. 웹사이트 만들기</p>
 
         <h3>html의 유용함</h3>
         <p>
             검색 엔진은 수많은 웹페이지를 다운받아 html 코드를 분석한다. 그러므로 heading tag를 사용한 글과 그냥 시각적으로 bold와 font-size로만 조절한 글이 검색 사이트에서 우선 순위에 차이가 있을 것이다.<br>
             웹은 모든 OS에서 동작하고, 소스코드를 누구나 볼 수 있으며 저작권이 없는 순수 공동체이다.
+        </p>
+
+        <h3>웹사이트</h3>
+        <p>
+            연관된 웹페이지를 링크하여 웹사이트를 만든다
         </p>
     </body>
 </html>
