[Web] 코딩야학 16~18강 실습

--- a/web/0.html
+++ b/web/0.html
@@ -15,7 +15,7 @@
         </ul>
 
         <h3>현재 진도</h3>
-        <p>15. 웹사이트 만들기</p>
+        <p>18. 웹호스팅 : github page</p>
 
         <h3>html의 유용함</h3>
         <p>
@@ -25,7 +25,8 @@
 
         <h3>웹사이트</h3>
         <p>
-            연관된 웹페이지를 링크하여 웹사이트를 만든다
+            연관된 웹페이지를 링크하여 웹사이트를 만든다<br>
+            최초의 web site : <a href="http://info.cern.ch" target="_blank">http://info.cern.ch</a>
         </p>
     </body>
 </html>
